# einfunc

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/einfunc/: __init__.py  einfunc.py
tests/: test_einfunc_function.py  test_einfunc_reduction.py  test_einfunc_shape.py
