[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "einfunc"
dynamic = ["version"]
description = 'Einstein notation function which allows for simple, readible, and highly flexible tensor operations.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Hayden Prairie", email = "haydenprairie@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Hprairie/einfunc#readme"
Issues = "https://github.com/Hprairie/einfunc/issues"
Source = "https://github.com/Hprairie/einfunc"

[tool.hatch.version]
path = "src/einfunc/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/einfunc tests}"

[tool.coverage.run]
source_pkgs = ["einfunc", "tests"]
branch = true
parallel = true
omit = [
  "src/einfunc/__about__.py",
]

[tool.coverage.paths]
einfunc = ["src/einfunc", "*/einfunc/src/einfunc"]
tests = ["tests", "*/einfunc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
